# Coolsecture

./: README.md  pyproject.toml
example/: Snakefile  config.yaml
example/step0/: Aar.fa.fai  Aar_Asu.link  Aar_Ath.link  Asu.fa.fai  Asu_Ath.link  Ath.fa.fai
src/coolsecture/: __main__.py  asm2link.py  contact_stat.py  lift2cool.py  liftcontacts.py  link2mark.py  metric.py  plot_cross.py  post_common.py  prepare.py  roughlift.py
